# gpt-subtrans

./: .aiexclude  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  OPENAI.md  docker-compose.yml  install.bat  install.sh  pyproject.toml  readme.md  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  docker-publish.yml
GUI/: AboutDialog.py  Command.py  CommandQueue.py  FirstRunOptions.py  GuiInterface.py  MainToolbar.py  MainWindow.py  NewProjectSettings.py  ProjectActions.py  ProjectDataModel.py  SettingsDialog.py  SubtitleListModel.py
GUI/Commands/: BatchSubtitlesCommand.py  LoadSubtitleFile.py  (+5 more)
GuiSubtrans/: AboutDialog.py  Command.py  CommandQueue.py  EditInstructionsDialog.py  FirstRunOptions.py  GUICommands.py  GuiHelpers.py  GuiInterface.py  GuiSubtitleTestCase.py  MainToolbar.py  MainWindow.py  NewProjectSettings.py  ProjectActions.py  ProjectDataModel.py  ProjectSelection.py  ProjectToolbar.py  ScenesBatchesModel.py  SettingsDialog.py  SubtitleItemDelegate.py  SubtitleListModel.py
PySubtitle/: Options.py  SettingsType.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleData.py  SubtitleFileHandler.py  SubtitleFormatRegistry.py  SubtitleLine.py  SubtitleProcessor.py  SubtitleProject.py  SubtitleScene.py  SubtitleSerialisation.py  SubtitleTranslator.py  SubtitleValidator.py  Subtitles.py  TranslationParser.py
PySubtitleHooks/: hook-PySubtitle.py
PySubtrans/: CHANGELOG.md  Instructions.py  Options.py  ProviderSettingsView.py  README.md  SettingsType.py  Substitutions.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleBuilder.py  SubtitleData.py  SubtitleEditor.py  SubtitleError.py  SubtitleFileHandler.py  SubtitleFormatRegistry.py  SubtitleLine.py  SubtitleProcessor.py  SubtitleProject.py  SubtitleScene.py  SubtitleSerialisation.py  SubtitleTranslator.py  SubtitleValidator.py  Subtitles.py  Translation.py  TranslationClient.py  TranslationEvents.py  TranslationParser.py  TranslationPrompt.py  TranslationProvider.py  TranslationRequest.py  VersionCheck.py  __init__.py  pyproject.toml  version.py
PySubtrans/Formats/: SSAFileHandler.py  SrtFileHandler.py  VttFileHandler.py  __init__.py
PySubtrans/Helpers/: ContextHelpers.py  InstructionsHelpers.py  Localization.py  Parse.py  SettingsHelpers.py  SubtitleHelpers.py  TestCases.py  Tests.py  Text.py  Time.py  __init__.py
PySubtrans/Providers/: Provider_Azure.py  Provider_Bedrock.py  Provider_Claude.py  Provider_Custom.py  Provider_DeepSeek.py  Provider_Gemini.py  Provider_LiteLLM.py  Provider_Mistral.py  Provider_OpenAI.py  Provider_OpenRouter.py  __init__.py
PySubtrans/Providers/Anthropic/: AnthropicClient.py
PySubtrans/Providers/Azure/: AzureOpenAIClient.py
PySubtrans/Providers/Bedrock/: BedrockClient.py
PySubtrans/Providers/Clients/: AnthropicClient.py  AzureOpenAIClient.py  BedrockClient.py  ChatGPTClient.py  CustomClient.py  DeepSeekClient.py  GeminiClient.py  LiteLLMClient.py  MistralClient.py  OpenAIClient.py  OpenAIReasoningClient.py  OpenRouterClient.py  __init__.py
PySubtrans/Providers/Custom/: DeepSeekClient.py  OpenRouterClient.py
PySubtrans/Providers/Gemini/: GeminiClient.py
PySubtrans/Providers/Mistral/: MistralClient.py
PySubtrans/Providers/OpenAI/: ChatGPTClient.py  OpenAIClient.py  OpenAIReasoningClient.py
PySubtrans/UnitTests/: test_ChineseDinner.py  test_Options.py  test_Parse.py  test_PySubtrans.py  test_SsaFileHandler.py  test_Substitutions.py  test_SubtitleEditor.py  test_SubtitleFormatRegistry.py  test_SubtitleProject.py  test_SubtitleProjectFormats.py  test_Time.py  test_Translator.py  test_localization.py
PySubtrans/UnitTests/TestData/: chinese_dinner.py
Tests/: batcher_test.py  preprocessor_test.py  unit_tests.py
app/: config.py  main.py
configs/: config.json
docs/: architecture.md  multi-format-support-proposal.md  proxy_test.md  tests_review.md  translation-flow.md
hooks/: README.md  hook-PySubtrans.py  install.bat  install.sh  pre-commit
instructions/: instructions (improve quality).txt  instructions (transliteration).txt  instructions.txt
locales/: gui-subtrans.pot
scripts/: azure-subtrans.py  batch-translate.py  bedrock-subtrans.py  check_imports.py  check_package_ages.py  claude-subtrans.py  deepseek-subtrans.py  extract_strings.py  gemini-subtrans.py  generate-cmd.sh  gpt-subtrans.py  gui-subtrans.py  llm-subtrans.py  makedistro-mac.sh  makedistro.bat  makedistro.sh  mistral-subtrans.py  publish_package.py  run_tests.py  subtrans_common.py  sync_version.py  test_terminology.py  update_translations.py  verify_package.py
tests/: preprocessor_test.py  unit_tests.py
(+135 files in other folders)
