[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-subtrans"
version = "1.6.0"
description = "Subtitle translation tools using large language models"
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "python-dotenv",
    "srt",
    "pysubs2",
    "regex",
    "babel",
    "appdirs",
    "blinker",
    "requests",
    "setuptools",
    "httpx",
    "httpx[socks]"
]

[project.optional-dependencies]
gui = [
    "darkdetect",
    "pyside6"
]
openai = ["openai"]
azure = ["openai"]
gemini = ["google-genai", "google-api-core"]
claude = ["anthropic>=0.78.0"]
mistral = ["mistralai"]
bedrock = ["boto3"]
litellm = ["litellm>=1.84.0,<1.87.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["PySubtrans*", "GuiSubtrans*", "scripts*"]
namespaces = true

[tool.pyright]
include = ["PySubtrans", "GuiSubtrans", "scripts", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = "envsubtrans"

# Stricter checking
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportGeneralTypeIssues = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
