[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysubtrans"
version = "1.5.1"
description = "Core subtitle translation toolkit used by LLM-Subtrans"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "python-dotenv",
    "srt",
    "pysubs2",
    "regex",
    "babel",
    "appdirs",
    "blinker",
    "requests",
    "setuptools",
    "httpx",
    "httpx[socks]"
]

[project.optional-dependencies]
openai = [
    "openai"
]
azure = [
    "openai"
]
gemini = [
    "google-genai",
    "google-api-core"
]
claude = [
    "anthropic"
]
mistral = [
    "mistralai"
]
bedrock = [
    "boto3"
]

[project.urls]
Homepage = "https://github.com/machinewrapped/llm-subtrans"
Documentation = "https://github.com/machinewrapped/llm-subtrans/blob/main/PySubtrans/README.md"
Source = "https://github.com/machinewrapped/llm-subtrans"
Issues = "https://github.com/machinewrapped/llm-subtrans/issues"

[tool.setuptools]
packages = [
    "PySubtrans",
    "PySubtrans.Formats",
    "PySubtrans.Helpers",
    "PySubtrans.Providers",
    "PySubtrans.Providers.Clients"
]
package-dir = {"PySubtrans" = "."}
